--- a/_config.yml
+++ b/_config.yml
@@ -16,16 +16,13 @@ defaults:
     values:
       title: dbyll
 
-description: Stylish Jekyll Theme
+description: Machine Learning, Data Analysis, Dev, Psychology, WOW
 author:
-  name: dbyll
-  email: dbyll@ismaildemirbilek.com
-  github: dbtek
-  twitter: dbtek
-  pinterest: asd123
-  linkedin: asd123
-  bio: Your stylish, minimalist theme!
-  email_md5: 726351295ec82e145928582f595aa3aa
+  name: Ho Loong
+  email: 496791354@qq.com
+  github: https://github.com/NemoHoHaloAi
+  kaggle: https://www.kaggle.com/holoong9291
+  bio: Machine Learning, Data Analysis, Dev, Psychology, WOW
 
 rss_path: feed.xml
 categories_path: categories.html
