--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ description: Machine Learning, Data Analysis, Dev, Psychology, WOW
 author:
   name: Ho Loong
   email: 496791354@qq.com
-  github: https://github.com/NemoHoHaloAi
+  github: NemoHoHaloAi
   kaggle: https://www.kaggle.com/holoong9291
   bio: Machine Learning, Data Analysis, Dev, Psychology, WOW
 
