更新配置项、增加kaggle，图标没找到伤心。。。

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ author:
   name: Ho Loong
   email: 496791354@qq.com
   github: NemoHoHaloAi
-  kaggle: https://www.kaggle.com/holoong9291
+  kaggle: holoong9291
   bio: Machine Learning, Data Analysis, Dev, Psychology, WOW
 
 rss_path: feed.xml
