--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ description: Machine Learning, Data Analysis, Dev, Psychology, WOW
 author:
   name: Ho Loong
   email: 496791354@qq.com
+  email_md5: f61bc260945d6dd9fb73606800d50a1c
   github: NemoHoHaloAi
   kaggle: holoong9291
   bio: Machine Learning, Data Analysis, Dev, Psychology, WOW
